Stops panel covering toolbar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@
 #brackets-trello {
 	position: absolute;
 	top: 0;
-	right: 0;
+	right: 30px;
 	z-index: 1000;
 	box-sizing: border-box;
 	overflow: auto;
